--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ipwa01",
   "version": "0.1.0",
-  "homepage": "https://FlorianBoehler.github.io/ipwa01",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
