--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ipwa01",
   "version": "0.1.0",
+  "homepage": "https://{FlorianBoehler.github.io/ipwa01",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +50,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.1"
   }
 }
